Add AppDbContext and configure identity management

--- a/services/auth/AuthService/AuthService.Api/Auth.Api.csproj
+++ b/services/auth/AuthService/AuthService.Api/Auth.Api.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Auth.Infrastructure\Auth.Infrastructure.csproj" />
     <ProjectReference Include="..\AuthService.Application\Auth.Application.csproj" />
   </ItemGroup>
 
