--- a/services/auth/AuthService/Auth.Api/Auth.Api.csproj
+++ b/services/auth/AuthService/Auth.Api/Auth.Api.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Auth.Infrastructure\Auth.Infrastructure.csproj" />
-    <ProjectReference Include="..\AuthService.Application\Auth.Application.csproj" />
+    <ProjectReference Include="..\Auth.Application\Auth.Application.csproj" />
   </ItemGroup>
 
 </Project>
