Update auth service

--- a/services/auth/AuthService/Auth.Api/appsettings.Development.json
+++ b/services/auth/AuthService/Auth.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=mercibus_auth_db;User Id=postgres;Password=postgres;SearchPath=identity;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
