--- a/services/auth/AuthService/Auth.Api/appsettings.json
+++ b/services/auth/AuthService/Auth.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=mercibus_auth_db;User Id=postgres;Password=postgres;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=mercibus_auth_db;User Id=postgres;Password=postgres;SearchPath=identity;"
   },
   "Logging": {
     "LogLevel": {
