--- a/services/auth/AuthService/Auth.Application/Auth.Application.csproj
+++ b/services/auth/AuthService/Auth.Application/Auth.Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Auth.Domain\Auth.Domain.csproj" />
+    <ProjectReference Include="..\Auth.Infrastructure\Auth.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
