Move email server and port config keys to secret

--- a/services/auth/AuthService/Auth.Api/appsettings.Development.json
+++ b/services/auth/AuthService/Auth.Api/appsettings.Development.json
@@ -9,11 +9,15 @@
     "ExpireMillis": 60000
   },
   "Email": {
-    "Server": "smtp.sample.com",
-    "Port": "587",
+    "Server": "",
+    "Port": "",
     "Sender": "",
     "Username": "",
     "Password": ""
+  },
+  "EmailConfirmRedirect": {
+    "Success": "",
+    "Fail": ""
   },
   "Logging": {
     "LogLevel": {
