--- a/services/auth/AuthService/Auth.Api/appsettings.json
+++ b/services/auth/AuthService/Auth.Api/appsettings.json
@@ -6,7 +6,7 @@
     "Issuer": "mercibus-auth",
     "Audience": "mercibus-app",
     "Key": "",
-    "ExpireMillis": 60000
+    "ExpireMillis": 3600000
   },
   "Email": {
     "Server": "",
