Revise redirect url config keys

--- a/services/auth/AuthService/Auth.Api/appsettings.Development.json
+++ b/services/auth/AuthService/Auth.Api/appsettings.Development.json
@@ -15,9 +15,9 @@
     "Username": "",
     "Password": ""
   },
-  "EmailConfirmRedirect": {
-    "Success": "",
-    "Fail": ""
+  "RedirectUrl": {
+    "EmailConfirmSuccess": "",
+    "EmailConfirmFail": ""
   },
   "Logging": {
     "LogLevel": {
