Add api/auth/forgot-password endpoint

--- a/services/auth/AuthService/Auth.Api/appsettings.Development.json
+++ b/services/auth/AuthService/Auth.Api/appsettings.Development.json
@@ -17,7 +17,8 @@
   },
   "RedirectUrl": {
     "EmailConfirmSuccess": "",
-    "EmailConfirmFail": ""
+    "EmailConfirmFail": "",
+    "PasswordReset": ""
   },
   "Logging": {
     "LogLevel": {
