--- a/services/auth/AuthService/Auth.Application/Auth.Application.csproj
+++ b/services/auth/AuthService/Auth.Application/Auth.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.6"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
         <PackageReference Include="SharpGrip.FluentValidation.AutoValidation.Mvc" Version="1.5.0"/>
     </ItemGroup>
 
