--- a/services/auth/AuthService/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/services/auth/AuthService/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentEmail.Razor" Version="3.0.2"/>
+        <PackageReference Include="FluentEmail.Smtp" Version="3.0.2"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.17"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
