--- a/services/auth/AuthService/Auth.Api/Auth.Api.csproj
+++ b/services/auth/AuthService/Auth.Api/Auth.Api.csproj
@@ -7,6 +7,7 @@
         <PreserveCompilationContext>true</PreserveCompilationContext>
         <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
         <UserSecretsId>17d9cf1b-28dc-463e-9fa4-2c331aa7af19</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -21,6 +22,12 @@
 
     <ItemGroup>
         <None Include="Content\EmailTemplate.cshtml"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
     </ItemGroup>
 
 </Project>
