--- a/.github/workflows/auth-service-build.yml
+++ b/.github/workflows/auth-service-build.yml
@@ -24,7 +24,7 @@ jobs:
           dotnet-version: 8.0.x
           
       - name: Restore dependencies
-        uses: dotnet restore
+        run: dotnet restore
         
       - name: Build
-        uses: dotnet build --no-restore
+        run: dotnet build --no-restore
