--- a/.github/workflows/auth-service-build.yml
+++ b/.github/workflows/auth-service-build.yml
@@ -2,9 +2,9 @@ name: Auth Service Build
 
 on:
   push:
-    branches: [ "main, develop" ]
+    branches: [ "main", "develop" ]
   pull_request:
-    branches: [ "main, develop" ]
+    branches: [ "main", "develop" ]
 
 jobs:
   build:
