Update auth service workflow job names

--- a/.github/workflows/auth-service-sonarqube.yml
+++ b/.github/workflows/auth-service-sonarqube.yml
@@ -1,4 +1,4 @@
-name: SonarQube
+name: Auth Service SonarQube
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     types: [opened, synchronize, reopened]
     
 jobs:
-  build:
+  analyze:
     name: Build and analyze
     runs-on: windows-latest
     
