--- a/.github/workflows/auth-service-sonarqube.yml
+++ b/.github/workflows/auth-service-sonarqube.yml
@@ -9,8 +9,11 @@ on:
     
 jobs:
   analyze:
-    name: Build and analyze
     runs-on: windows-latest
+    
+    defaults:
+      run:
+        working-directory: ./services/auth/
     
     steps:
       - name: Set up JDK 17
