Update auth service workflow to trigger only if directory is changed

--- a/.github/workflows/auth-service-build.yml
+++ b/.github/workflows/auth-service-build.yml
@@ -3,8 +3,12 @@ name: Auth Service Build
 on:
   push:
     branches: [ "main", "develop" ]
+    paths:
+      - 'services/auth/**'
   pull_request:
     branches: [ "main", "develop" ]
+    paths:
+      - 'services/auth/**'
 
 jobs:
   build:
