--- a/.github/workflows/auth-service-sonarqube.yml
+++ b/.github/workflows/auth-service-sonarqube.yml
@@ -4,8 +4,12 @@ on:
   push:
     branches:
       ["main", "develop"]
+    paths:
+      - 'services/auth/**'
   pull_request:
     types: [opened, synchronize, reopened]
+    paths:
+      - 'services/auth/**'
     
 jobs:
   analyze:
