--- a/.github/workflows/auth-service.test.yml
+++ b/.github/workflows/auth-service.test.yml
@@ -3,8 +3,12 @@ name: Auth Service Test
 on:
   push:
     branches: [ "main", "develop" ]
+    paths:
+      - 'services/auth/**'
   pull_request:
     branches: [ "main", "develop" ]
+    paths:
+      - 'services/auth/**'
 
 jobs:
   test:
