--- a/.github/workflows/auth-service-dockerize.yml
+++ b/.github/workflows/auth-service-dockerize.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           IMAGE_NAME=mercibus-auth
           TAG=${GITHUB_SHA::7}
-          docker build -t $IMAGE_NAME:$TAG .
+          docker build -t $IMAGE_NAME:$TAG -f Auth.Api/Dockerfile Auth.Api
           if [ "${{ github.event_name }}" = "push" ]; then
             docker tag $IMAGE_NAME:$TAG ${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME:latest
             docker tag $IMAGE_NAME:$TAG ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest
