--- a/.github/workflows/auth-service-dockerize.yml
+++ b/.github/workflows/auth-service-dockerize.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   dockerize:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     defaults:
       run:
         working-directory: './services/auth'
