Set auth service email templates to always copy on build

--- a/services/auth/Auth.Api/Auth.Api.csproj
+++ b/services/auth/Auth.Api/Auth.Api.csproj
@@ -21,12 +21,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="Content\EmailTemplate.cshtml"/>
-    </ItemGroup>
-
-    <ItemGroup>
         <Content Include="..\.dockerignore">
             <Link>.dockerignore</Link>
+        </Content>
+        <Content Update="Content\ConfirmEmailTemplate.cshtml">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Update="Content\PasswordResetTemplate.cshtml">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
 
