--- a/services/auth/Auth.Api/Auth.Api.csproj
+++ b/services/auth/Auth.Api/Auth.Api.csproj
@@ -13,6 +13,9 @@
     <ItemGroup>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <Content Include="Content\**\*">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
