--- a/.github/workflows/auth-service-sonarqube.yml
+++ b/.github/workflows/auth-service-sonarqube.yml
@@ -22,10 +22,6 @@ jobs:
   analyze:
     runs-on: windows-latest
     
-    defaults:
-      run:
-        working-directory: ./services/auth/
-    
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -54,17 +50,12 @@ jobs:
             /d:sonar.cs.opencover.reportsPaths="coverage.xml"
 
       - name: Build
-        run: dotnet build Auth.Api/Auth.Api.csproj --no-incremental
+        run: dotnet build services/auth/Auth.Api/Auth.Api.csproj
 
-      - name: Run Coverlet Console
+      - name: Run Tests with Coverlet
         run: |
-          coverlet Auth.Tests\bin\Debug\net8.0\Auth.Tests.dll `
+          coverlet services/auth/Auth.Tests/bin/Debug/net8.0/Auth.Tests.dll `
             --target "dotnet" `
-            --targetargs "test Auth.Tests\Auth.Tests.csproj --no-build" `
+            --targetargs "test services/auth/Auth.Tests/Auth.Tests.csproj --no-build" `
             -f opencover `
-            -o "coverage.xml"
-
-      - name: SonarScanner End
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: .sonar/dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+            -o "services/auth/coverage.xml"
