--- a/.github/workflows/auth-service-sonarqube.yml
+++ b/.github/workflows/auth-service-sonarqube.yml
@@ -17,45 +17,69 @@ on:
       - reopened
     paths:
       - 'services/auth/**'
-    
+
 jobs:
   analyze:
     runs-on: windows-latest
-    
+
+    defaults:
+      run:
+        working-directory: ./services/auth/
+
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'zulu' 
-      
-      - name: Install Coverlet globally
-        run: dotnet tool install -g coverlet.console
 
-      - name: Add tools to PATH
-        run: echo "$HOME/.dotnet/tools" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
+      - name: Checkout code 
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 
 
-      - name: Install SonarScanner CLI
-        run: dotnet tool install dotnet-sonarscanner --tool-path .sonar
+      - name: Cache SonarQube Cloud packages
+        uses: actions/cache@v4
+        with:
+          path: ~\sonar\cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
 
-      - name: SonarScanner Begin
+      - name: Cache SonarQube Cloud scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v4
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+
+      - name: Install SonarQube Cloud scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: powershell
+        run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+
+      - name: Install coverlet.console
+        shell: powershell
+        run: dotnet tool install --global coverlet.console
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Run tests with coverage
+        run: |
+          coverlet ./Auth.Tests/bin/Debug/net8.0/Auth.Tests.dll `
+            --target "dotnet" `
+            --targetargs "test ./Auth.Tests/Auth.Tests.csproj --no-build --verbosity normal" `
+            --format opencover `
+            --output "./TestResults/coverage.opencover.xml"
+          
+      - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        shell: powershell
         run: |
-          .sonar/dotnet-sonarscanner begin `
-            /k:"cardosakv_mercibus" `
-            /o:"cardosakv" `
-            /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
-            /d:sonar.host.url="https://sonarcloud.io" `
-            /d:sonar.cs.opencover.reportsPaths="coverage.xml"
-
-      - name: Build
-        run: dotnet build services/auth/Auth.Api/Auth.Api.csproj
-
-      - name: Run Tests with Coverlet
-        run: |
-          coverlet services/auth/Auth.Tests/bin/Debug/net8.0/Auth.Tests.dll `
-            --target "dotnet" `
-            --targetargs "test services/auth/Auth.Tests/Auth.Tests.csproj --no-build" `
-            -f opencover `
-            -o "services/auth/coverage.xml"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"cardosakv_mercibus" /o:"cardosakv" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          dotnet build
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
