--- a/services/auth/Auth.Api/Dockerfile
+++ b/services/auth/Auth.Api/Dockerfile
@@ -14,11 +14,11 @@ COPY ["Auth.Domain/Auth.Domain.csproj", "Auth.Domain/"]
 RUN dotnet restore "Auth.Api/Auth.Api.csproj"
 COPY . .
 WORKDIR "/src/Auth.Api"
-RUN dotnet build "./Auth.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./Auth.Api.csproj" -c "$BUILD_CONFIGURATION" -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Auth.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Auth.Api.csproj" -c "$BUILD_CONFIGURATION" -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
