Add catalog service connection string in config

--- a/services/catalog/Catalog.Api/Catalog.Api.csproj
+++ b/services/catalog/Catalog.Api/Catalog.Api.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>9bd06d3e-0f29-4821-9a67-91690be3c096</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
