--- a/services/catalog/Catalog.Application/Catalog.Application.csproj
+++ b/services/catalog/Catalog.Application/Catalog.Application.csproj
@@ -10,4 +10,9 @@
         <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Interfaces\Repositories\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
