--- a/services/catalog/Catalog.Application/Catalog.Application.csproj
+++ b/services/catalog/Catalog.Application/Catalog.Application.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="15.0.0"/>
+        <PackageReference Include="FluentValidation" Version="12.0.0" />
     </ItemGroup>
 
 </Project>
