--- a/.github/workflows/base-sonarqube.yml
+++ b/.github/workflows/base-sonarqube.yml
@@ -1,18 +1,20 @@
-name: Auth Service SonarQube
+name: Base SonarCloud Analysis
 
 on:
-  push:
-    branches:
-      - main
-      - develop
-    paths:
-      - 'services/auth/**'
-  pull_request:
-    branches:
-      - main
-      - develop
-    paths:
-      - 'services/auth/**'
+  workflow_call:
+    inputs:
+      service:
+        required: true
+        type: string
+      project_key:
+        required: true
+        type: string
+      project_dll:
+        required: true
+        type: string
+      sonar_token:
+        required: true
+        type: string
 
 jobs:
   analyze:
@@ -20,7 +22,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./services/auth/
+        working-directory: ./services/${{ inputs.service }}/
 
     steps:
       - name: Set up JDK 17
@@ -58,16 +60,16 @@ jobs:
 
       - name: Begin SonarCloud analysis
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ inputs.sonar_token }}
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin `
-            /k:"cardosakv_mercibus" `
+            /k:"${{ inputs.project_key }}" `
             /o:"cardosakv" `
-            /d:sonar.token="${{ secrets.SONAR_TOKEN }}" `
+            /d:sonar.token="${{ inputs.sonar_token }}" `
             /d:sonar.host.url="https://sonarcloud.io" `
             /d:"sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml" `
-            /d:"sonar.coverage.exclusions=**/Auth.Infrastructure/**/*.cs,**/Auth.Domain/**/*.cs,**/Auth.Api/Program.cs,**/Auth.Api/Middlewares/**/*.cs,**/Auth.Application/Common/**/*.cs,**/Auth.Validators/**/*.cs"
+            /d:"sonar.coverage.exclusions=**/${{ inputs.project_dll }}.Infrastructure/**/*.cs,**/${{ inputs.project_dll }}.Domain/**/*.cs,**/${{ inputs.project_dll }}.Api/Program.cs,**/${{ inputs.project_dll }}.Api/Middlewares/**/*.cs,**/${{ inputs.project_dll }}.Application/Common/**/*.cs,**/${{ inputs.project_dll }}.Validators/**/*.cs"
 
       - name: Restore and build
         shell: powershell
@@ -82,9 +84,9 @@ jobs:
       - name: Run tests with OpenCover coverage
         shell: powershell
         run: |
-          coverlet ./Auth.Tests/bin/Release/net8.0/Auth.Tests.dll `
+          coverlet ./${{ inputs.project_dll }}.Tests/bin/Release/net8.0/${{ inputs.project_dll }}.Tests.dll `
             --target "dotnet" `
-            --targetargs "test ./Auth.Tests/Auth.Tests.csproj --no-build --configuration Release" `
+            --targetargs "test ./${{ inputs.project_dll }}.Tests/${{ inputs.project_dll }}.Tests.csproj --no-build --configuration Release" `
             --format opencover `
             --output "./TestResults/coverage.opencover.xml"
 
@@ -94,6 +96,6 @@ jobs:
 
       - name: End SonarCloud analysis
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ inputs.sonar_token }}
         shell: powershell
-        run: .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+        run: .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ inputs.sonar_token }}"
