--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -2,11 +2,15 @@ name: Auth Service CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches:
+      - main
+      - develop
     paths:
       - 'services/auth/**'
   pull_request:
-    branches: [ main, develop ]
+    branches:
+      - main
+      - develop
     paths:
       - 'services/auth/**'
 
