--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -16,17 +16,17 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/base-build.yml
+    uses: cardosakv/mercibus/.github/workflows/base-build.yml@develop
     with:
       service: auth
   
   test:
-    uses: ./.github/workflows/base-test.yml
+    uses: cardosakv/mercibus/.github/workflows/base-test.yml@develop
     with:
       service: auth
   
   analyze:
-    uses: ./.github/workflows/base-sonarqube.yml
+    uses: cardosakv/mercibus/.github/workflows/base-sonarqube.yml@develop
     with:
       service: auth
       project_key: mercibus_auth
@@ -34,7 +34,7 @@ jobs:
       sonar_token: ${{ secrets.SONAR_TOKEN_AUTH }}
   
   dockerize:
-    uses: ./.github/workflows/base-dockerize.yml
+    uses: cardosakv/mercibus/.github/workflows/base-dockerize.yml@develop
     with:
       service: auth
       image_name: mercibus_auth
