Refactor CI configuration to include project DLL input for auth service

--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -38,4 +38,5 @@ jobs:
     uses: ./.github/workflows/base-dockerize.yml
     with:
       service: auth
+      project_dll: Auth
       image_name: mercibus_auth
