--- a/.github/workflows/base-dockerize.yml
+++ b/.github/workflows/base-dockerize.yml
@@ -12,6 +12,11 @@ on:
       image_name:
         required: true
         type: string
+    secrets:
+      docker_username:
+        required: true
+      docker_password:
+        required: true
 
 jobs:
   dockerize:
@@ -27,8 +32,8 @@ jobs:
         if: github.event_name == 'push'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.docker_username }}
+          password: ${{ secrets.docker_password }}
 
       - name: GHCR Login
         if: github.event_name == 'push'
@@ -42,11 +47,11 @@ jobs:
         run: |
           TAG=${GITHUB_SHA::7}
           docker build -t ${{ inputs.image_name }}:$TAG -f ./${{ inputs.project_dll }}.Api/Dockerfile .
-          docker tag ${{ inputs.image_name }}:$TAG ${{ secrets.DOCKER_USERNAME }}/${{ inputs.image_name }}:latest
+          docker tag ${{ inputs.image_name }}:$TAG ${{ secrets.docker_username }}/${{ inputs.image_name }}:latest
           docker tag ${{ inputs.image_name }}:$TAG ghcr.io/${{ github.repository_owner }}/${{ inputs.image_name }}:latest
 
       - name: Push Images
         if: github.event_name == 'push'
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ inputs.image_name }}:latest
+          docker push ${{ secrets.docker_username }}/${{ inputs.image_name }}:latest
           docker push ghcr.io/${{ github.repository_owner }}/${{ inputs.image_name }}:latest
