Update permissions in base-dockerize.yml for dockerize job

--- a/.github/workflows/base-dockerize.yml
+++ b/.github/workflows/base-dockerize.yml
@@ -21,6 +21,9 @@ on:
 jobs:
   dockerize:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     defaults:
       run:
         working-directory: ./services/${{ inputs.service }}/
