Update permissions in auth-ci.yml for improved access control

--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -13,6 +13,10 @@ on:
       - develop
     paths:
       - 'services/auth/**'
+        
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build:
