--- a/services/catalog/Catalog.Application/Catalog.Application.csproj
+++ b/services/catalog/Catalog.Application/Catalog.Application.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="15.0.0"/>
         <PackageReference Include="FluentValidation" Version="12.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
