--- a/shared/Common/Common/Mercibus.Common.csproj
+++ b/shared/Common/Common/Mercibus.Common.csproj
@@ -14,6 +14,7 @@
     <PackageId>Mercibus.Common</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Version>1.0.3</Version>
+    <Product>Mercibus.Common</Product>
   </PropertyGroup>
 
   <ItemGroup>
