--- a/services/auth/Auth.Tests/Auth.Tests.csproj
+++ b/services/auth/Auth.Tests/Auth.Tests.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
         <PackageReference Include="FluentAssertions.AspNetCore.Mvc" Version="4.2.0"/>
+        <PackageReference Include="Mercibus.Common" Version="1.0.4"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="Moq" Version="4.20.72"/>
         <PackageReference Include="xunit" Version="2.9.2"/>
