Rename Auth.Tests to Auth.UnitTests and update namespaces for consistency

--- a/services/auth/Auth.UnitTests/Auth.UnitTests.csproj
+++ b/services/auth/Auth.UnitTests/Auth.UnitTests.csproj
@@ -8,6 +8,8 @@
         <PreserveCompilationContext>true</PreserveCompilationContext>
         <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
         <PreserveCompilationContext>true</PreserveCompilationContext>
+        <AssemblyName>Auth.UnitTests</AssemblyName>
+        <RootNamespace>Auth.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
