Add Microsoft.EntityFrameworkCore.Relational package reference

--- a/services/auth/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/services/auth/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="FluentEmail.Smtp" Version="3.0.2"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.17"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.17"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
     </ItemGroup>
 
