--- a/.github/workflows/base-test.yml
+++ b/.github/workflows/base-test.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Docker
+        uses: docker/setup-docker-action@v4.3.0
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
