Add secret management for email and JWT configuration in CI workflows

--- a/.github/workflows/auth-ci.yml
+++ b/.github/workflows/auth-ci.yml
@@ -13,7 +13,7 @@ on:
       - develop
     paths:
       - 'services/auth/**'
-        
+
 permissions:
   contents: read
   packages: write
@@ -23,11 +23,31 @@ jobs:
     uses: ./.github/workflows/base-build.yml
     with:
       service: auth
+    secrets:
+      jwt_key: ${{ secrets.JWT_KEY }}
+      email_server: ${{ secrets.EMAIL_SERVER }}
+      email_port: ${{ secrets.EMAIL_PORT }}
+      email_sender: ${{ secrets.EMAIL_SENDER }}
+      email_username: ${{ secrets.EMAIL_USERNAME }}
+      email_password: ${{ secrets.EMAIL_PASSWORD }}
+      redirect_email_confirm_success: ${{ secrets.REDIRECT_EMAILCONFIRM_SUCCESS}}
+      redirect_email_confirm_fail: ${{ secrets.REDIRECT_EMAILCONFIRM_FAIL }}
+      redirect_password_reset: ${{ secrets.REDIRECT_PASSWORD_RESET }}
   
   test:
     uses: ./.github/workflows/base-test.yml
     with:
       service: auth
+    secrets:
+      jwt_key: ${{ secrets.JWT_KEY }}
+      email_server: ${{ secrets.EMAIL_SERVER }}
+      email_port: ${{ secrets.EMAIL_PORT }}
+      email_sender: ${{ secrets.EMAIL_SENDER }}
+      email_username: ${{ secrets.EMAIL_USERNAME }}
+      email_password: ${{ secrets.EMAIL_PASSWORD }}
+      redirect_email_confirm_success: ${{ secrets.REDIRECT_EMAILCONFIRM_SUCCESS}}
+      redirect_email_confirm_fail: ${{ secrets.REDIRECT_EMAILCONFIRM_FAIL }}
+      redirect_password_reset: ${{ secrets.REDIRECT_PASSWORD_RESET }}
   
   analyze:
     uses: ./.github/workflows/base-sonarqube.yml
