--- a/.github/workflows/base-sonarqube.yml
+++ b/.github/workflows/base-sonarqube.yml
@@ -15,6 +15,24 @@ on:
     secrets:
       sonar_token:
         required: true
+      jwt_key:
+        required: false
+      email_server:
+        required: false
+      email_port:
+        required: false
+      email_sender:
+        required: false
+      email_username:
+        required: false
+      email_password:
+        required: false
+      redirect_email_confirm_success:
+        required: false
+      redirect_email_confirm_fail:
+        required: false
+      redirect_password_reset:
+        required: false
 
 jobs:
   analyze:
@@ -97,6 +115,16 @@ jobs:
             --targetargs "test ./${{ inputs.project_dll }}.IntegrationTests/${{ inputs.project_dll }}.IntegrationTests.csproj --no-build --configuration Release" `
             --format opencover `
             --output "./TestResults/integration.coverage.opencover.xml"
+        env:
+          Jwt__Key: ${{ secrets.jwt_key }}
+          Email__Server: ${{ secrets.email_server }}
+          Email__Port: ${{ secrets.email_port }}
+          Email__Sender: ${{ secrets.email_sender }}
+          Email__Username: ${{ secrets.email_username }}
+          Email__Password: ${{ secrets.email_password }}
+          RedirectUrl__EmailConfirmSuccess: ${{ secrets.redirect_email_confirm_success }}
+          RedirectUrl__EmailConfirmFail: ${{ secrets.redirect_email_confirm_fail }}
+          RedirectUrl__PasswordReset: ${{ secrets.redirect_password_reset }}
 
       - name: Install ReportGenerator
         run: dotnet tool install --global dotnet-reportgenerator-globaltool
