--- a/.github/workflows/base-test.yml
+++ b/.github/workflows/base-test.yml
@@ -6,6 +6,25 @@ on:
       service:
         required: true
         type: string
+    secrets:
+      jwt_key:
+        required: false
+      email_server:
+        required: false
+      email_port:
+        required: false
+      email_sender:
+        required: false
+      email_username:
+        required: false
+      email_password:
+        required: false
+      redirect_email_confirm_success:
+        required: false
+      redirect_email_confirm_fail:
+        required: false
+      redirect_password_reset:
+        required: false
 
 jobs:
   test:
@@ -31,3 +50,13 @@ jobs:
 
       - name: Test
         run: dotnet test --no-restore --verbosity normal
+        env:
+          Jwt__Key: ${{ secrets.jwt_key }}
+          Email__Server: ${{ secrets.email_server }}
+          Email__Port: ${{ secrets.email_port }}
+          Email__Sender: ${{ secrets.email_sender }}
+          Email__Username: ${{ secrets.email_username }}
+          Email__Password: ${{ secrets.email_password }}
+          RedirectUrl__EmailConfirmSuccess: ${{ secrets.redirect_email_confirm_success }}
+          RedirectUrl__EmailConfirmFail: ${{ secrets.redirect_email_confirm_fail }}
+          RedirectUrl__PasswordReset: ${{ secrets.redirect_password_reset }}
