--- a/.github/workflows/base-sonarqube.yml
+++ b/.github/workflows/base-sonarqube.yml
@@ -84,7 +84,7 @@ jobs:
             /o:"cardosakv" \
             /d:sonar.token="${{ secrets.sonar_token }}" \
             /d:sonar.host.url="https://sonarcloud.io" \
-            /d:sonar.cs.opencover.reportsPaths="**/TestResults/*.coverage.opencover.xml"
+            /d:sonar.cs.opencover.reportsPaths="**/TestResults/*.coverage.opencover.xml" \
             /d:sonar.coverage.exclusions="**/${{ inputs.project_dll }}.Infrastructure/Migrations/*.cs"
 
       - name: Restore and build
