Add blob storage functionality for user profile picture uploads

--- a/services/auth/Auth.Api/appsettings.json
+++ b/services/auth/Auth.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "BlobStorageConnection": ""
   },
   "Jwt": {
     "Issuer": "mercibus-auth",
@@ -19,6 +20,10 @@
     "EmailConfirmSuccess": "",
     "EmailConfirmFail": "",
     "PasswordReset": ""
+  },
+  "BlobStorage": {
+    "AccountName": "",
+    "AccountKey": ""
   },
   "Logging": {
     "LogLevel": {
