--- a/services/auth/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/services/auth/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.25.0"/>
         <PackageReference Include="FluentEmail.Razor" Version="3.0.2"/>
         <PackageReference Include="FluentEmail.Smtp" Version="3.0.2"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.17"/>
