--- a/services/auth/Auth.IntegrationTests/Auth.IntegrationTests.csproj
+++ b/services/auth/Auth.IntegrationTests/Auth.IntegrationTests.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <UserSecretsId>09bf041d-5538-4f21-8f0c-9b55f25e07d3</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,6 +16,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.18"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="Testcontainers.Azurite" Version="4.6.0"/>
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.6.0"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
