--- a/services/catalog/Catalog.Api/Catalog.Api.csproj
+++ b/services/catalog/Catalog.Api/Catalog.Api.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>9bd06d3e-0f29-4821-9a67-91690be3c096</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -25,6 +26,12 @@
         <ProjectReference Include="..\Catalog.Application\Catalog.Application.csproj"/>
         <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj"/>
         <ProjectReference Include="..\Catalog.Infrastructure\Catalog.Infrastructure.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
     </ItemGroup>
 
 </Project>
