Add initial integration tests for AddProductAsync endpoint

--- a/services/catalog/Catalog.Api/Catalog.Api.csproj
+++ b/services/catalog/Catalog.Api/Catalog.Api.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>9bd06d3e-0f29-4821-9a67-91690be3c096</UserSecretsId>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <PreserveCompilationContext>true</PreserveCompilationContext>
     </PropertyGroup>
 
     <ItemGroup>
