--- a/.github/workflows/catalog-ci.yml
+++ b/.github/workflows/catalog-ci.yml
@@ -36,7 +36,7 @@ jobs:
       project_key: mercibus_catalog
       project_dll: Catalog
     secrets:
-      sonar_token: ${{ secrets.SONAR_TOKEN_AUTH }}
+      sonar_token: ${{ secrets.SONAR_TOKEN_CATALOG }}
   
   dockerize:
     uses: ./.github/workflows/base-dockerize.yml
