Remove unused common directory in category integration test project

--- a/services/catalog/Catalog.IntegrationTests/Catalog.IntegrationTests.csproj
+++ b/services/catalog/Catalog.IntegrationTests/Catalog.IntegrationTests.csproj
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Common\"/>
+        <Folder Include="CategoryTests\"/>
     </ItemGroup>
 
     <ItemGroup>
